<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >


<TextView    
    android:id="@+id/betTeam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/france"
        android:drawablePadding="10dp"
        android:textSize="@dimen/dimTinyText" />

    
<TextView
    android:id="@+id/tiret"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="3dp"
    android:layout_below="@+id/betTeam1"
    android:text="@string/vs" />


<TextView
        android:id="@+id/betTeam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/tiret"
        android:paddingBottom="20dp"
        android:drawableLeft="@drawable/algeria"
        android:drawablePadding="10dp"
        android:textSize="@dimen/dimTinyText" />

<Button
    android:id="@+id/infomatch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    android:text="@string/Infomatch"
    android:layout_toLeftOf="@+id/makebet"
/>

<Button
    android:id="@+id/makebet"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:text="@string/Parier"
    android:background="#0db14e"
    android:layout_alignParentRight="true"
/>

<TextView
    android:id="@+id/yourbet"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:paddingTop="3dp"
    android:layout_marginRight="10dp"
    android:layout_below="@+id/makebet"
    android:layout_alignParentRight="true"
    android:text="@string/yourbet"
    android:textSize="@dimen/dimTinyText" />

</RelativeLayout>

