<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background" >

    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/bienvenue"
        android:textColor="#ffffff"
        android:textSize="@dimen/dimTitle" />

    <TextView
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:id="@+id/connectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/connect"
        android:textColor="#ffffff"
        android:textSize="@dimen/dimTitle" />

    <TextView
        android:layout_below="@+id/connectText"
        android:layout_centerHorizontal="true"
        android:id="@+id/connectHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/connectText"
        android:textColor="#ffffff"
        android:textSize="@dimen/dimTinyText" />

    <TextView
        android:layout_below="@+id/connectHelp"
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/loginTitle"
        android:textColor="#ffffff"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/dimText" />
    <EditText
        android:layout_below="@+id/connectHelp"
        android:layout_toRightOf="@+id/loginText"
        android:id="@+id/loginEdit"
        android:inputType="text"
        android:textColor="#ffffff"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/dimText" />

    <TextView
        android:layout_below="@+id/loginText"
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/password"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/dimText" />
    <EditText
        android:layout_below="@+id/loginText"
        android:layout_toRightOf="@+id/passwordText"
        android:id="@+id/passwordEdit"
        android:inputType="textPassword"
        android:ems="6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/dimText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:text="@string/loginButton"
        android:textColor="#ffffff"
        android:textSize="@dimen/dimText"
        android:padding="10dip"
        android:background="@drawable/rounded_edittext" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cheatButton"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:text="@string/loginButton"
        android:textColor="#ffffff"
        android:textSize="@dimen/dimText"
        android:padding="10dip"
        android:background="@drawable/rounded_edittext" />

</RelativeLayout>
