<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background" >
    
    <Button android:id="@+id/button_top4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_top4"
        android:textSize="@dimen/dimLargeText"
        android:textColor="#ffffff"
        android:gravity="left"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:onClick="goToTop4" />
    
    <Button android:id="@+id/button_matchs"
        android:layout_below="@+id/button_top4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_matchs"
        android:gravity="left"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:textSize="@dimen/dimLargeText"
        android:textColor="#ffffff"
        android:onClick="goToMatchs" />
    
    <Button android:id="@+id/button_points"
        android:layout_below="@+id/button_matchs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_points"
        android:textSize="@dimen/dimLargeText"
        android:textColor="#ffffff"
        android:gravity="left"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:onClick="goToPoints" />
 
</RelativeLayout>
