<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="@drawable/background"
    >

<Button android:id="@+id/button_top4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/button_top4"
    android:textColor="@color/rouge"
    android:background="@color/bleu_clair"
    android:gravity="start"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:onClick="goToTop4" />

<Button android:id="@+id/button_matchs"
    android:layout_below="@+id/button_top4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/button_matchs"
    android:gravity="start"
    android:textColor="@color/rouge"
    android:background="@color/bleu_clair"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:onClick="goToMatchs" />

<Button android:id="@+id/button_points"
    android:layout_below="@+id/button_matchs"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/button_points"
    android:textColor="@color/rouge"
    android:background="@color/bleu_clair"
    android:gravity="start"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin" />

</RelativeLayout>
